# MathLibHelper

./: .gitconfig  .gitignore  CMakeLists.txt  README.md  conanfile.py  main.cpp  regen_cmake.bat  regen_conan.bat  test.cpp  transformations.tga  vs2019
src/: Entities.h  MatN.cpp  MatN.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  VecN.h  obj.h  unidefs.h
test/: CMakeLists.txt  EntitiesTesting.cpp  MatrixTesting.cpp  TestUtils.h  VectorTesting.cpp  main.cpp  test.cpp
tiny_renderer/: CMakeLists.txt  Entities.h  ImageRenderer2D.h  ImageRenderer3D.h  SdlRenderer.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
